--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -1,22 +1,26 @@
 {
-    "devDependencies": {
-        "gulp": "3.8.x",
-        "gulp-connect": "2.0.x",
-        "proxy-middleware": "0.5.x",
-        "url": "0.10.x",
-        "karma": "0.x",
-        "bower": "1.3.x",
-        "karma-junit-reporter": "0.2.x"
-    },
-    "scripts": {
-        "postinstall": "bower install",
-
-        "prestart": "npm install",
-        "start": "gulp",
-
-        "pretest": "npm install",
-        "test": "karma start test/karma.conf.js",
-        "test-single-run": "karma start test/karma.conf.js  --single-run"
-    },
-    "engine": "node >= 0.4.1"
+  "devDependencies": {
+    "bower": "1.3.x",
+    "gulp": "3.8.x",
+    "gulp-clean": "0.3.x",
+    "gulp-connect": "2.0.x",
+    "gulp-ignore": "1.1.x",
+    "gulp-jshint": "1.6.x",
+    "gulp-minify-css": "0.3.x",
+    "gulp-minify-html": "0.1.x",
+    "gulp-uglify": "0.3.x",
+    "karma": "0.x",
+    "karma-junit-reporter": "0.2.x",
+    "proxy-middleware": "0.5.x",
+    "url": "0.10.x"
+  },
+  "scripts": {
+    "postinstall": "bower install",
+    "prestart": "npm install",
+    "start": "gulp",
+    "pretest": "npm install",
+    "test": "karma start test/karma.conf.js",
+    "test-single-run": "karma start test/karma.conf.js  --single-run"
+  },
+  "engine": "node >= 0.4.1"
 }
