--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -2,16 +2,23 @@
   "devDependencies": {
     "bower": "1.3.x",
     "gulp": "3.8.x",
+    "gulp-autoprefixer": "0.0.x",
     "gulp-clean": "0.3.x",
     "gulp-connect": "2.0.x",
     "gulp-ignore": "1.1.x",
-    "gulp-imagemin": "0.6.x",
+    "gulp-jade": "0.6.x",
+    "gulp-jsbeautifier": "0.0.x",
     "gulp-jshint": "1.6.x",
+    "gulp-less": "1.3.x",
     "gulp-minify-css": "0.3.x",
-    "gulp-minify-html": "0.1.x",
+    "gulp-ngmin": "0.3.x",
+    "gulp-rev": "0.4.x",
     "gulp-uglify": "0.3.x",
+    "gulp-usemin": "0.3.x",
+    "jshint-stylish": "0.3.x",
     "karma": "0.x",
     "karma-junit-reporter": "0.2.x",
+    "protractor": "1.0.x",
     "proxy-middleware": "0.5.x",
     "url": "0.10.x"
   },
@@ -21,7 +28,11 @@
     "start": "gulp",
     "pretest": "npm install",
     "test": "karma start test/karma.conf.js",
-    "test-single-run": "karma start test/karma.conf.js  --single-run"
+    "test-single-run": "karma start test/karma.conf.js  --single-run",
+    "preupdate-webdriver": "npm install",
+    "update-webdriver": "webdriver-manager update",
+    "preprotractor": "npm run update-webdriver",
+    "protractor": "protractor test/protractor-conf.js"
   },
   "engine": "node >= 0.4.1"
 }
