--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -4,22 +4,25 @@
     "gulp": "3.8.x",
     "gulp-autoprefixer": "0.0.x",
     "gulp-clean": "0.3.x",
+    "gulp-coffee": "2.0.x",
     "gulp-connect": "2.0.x",
     "gulp-ignore": "1.1.x",
     "gulp-jade": "0.6.x",
     "gulp-jsbeautifier": "0.0.x",
     "gulp-jshint": "1.6.x",
+    "gulp-karma": "0.0.x",
     "gulp-less": "1.3.x",
     "gulp-minify-css": "0.3.x",
     "gulp-ngmin": "0.3.x",
     "gulp-rev": "0.4.x",
     "gulp-uglify": "0.3.x",
     "gulp-usemin": "0.3.x",
+    "gulp-util": "2.2.x",
     "jshint-stylish": "0.3.x",
-    "karma": "0.x",
     "karma-junit-reporter": "0.2.x",
     "protractor": "1.0.x",
     "proxy-middleware": "0.5.x",
+    "run-sequence": "0.3.x",
     "url": "0.10.x"
   },
   "scripts": {
