--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -15,6 +15,7 @@
     "gulp-minify-css": "0.3.x",
     "gulp-ngmin": "0.3.x",
     "gulp-rev": "0.4.x",
+    "gulp-tsc": "0.9.x",
     "gulp-uglify": "0.3.x",
     "gulp-usemin": "0.3.x",
     "gulp-util": "2.2.x",
