NT Few gulp task added

--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -20,7 +20,10 @@
     "gulp-usemin": "0.3.x",
     "gulp-util": "2.2.x",
     "jshint-stylish": "0.3.x",
+    "karma-chai-plugins": "^0.2.1",
+    "karma-chrome-launcher": "0.1.x",
     "karma-junit-reporter": "0.2.x",
+    "karma-mocha": "0.1.x",
     "protractor": "1.0.x",
     "proxy-middleware": "0.5.x",
     "run-sequence": "0.3.x",
@@ -29,7 +32,7 @@
   "scripts": {
     "postinstall": "bower install",
     "prestart": "npm install",
-    "start": "gulp",
+    "start": "gulp dist",
     "pretest": "npm install",
     "test": "karma start test/karma.conf.js",
     "test-single-run": "karma start test/karma.conf.js  --single-run",
