--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -6,6 +6,7 @@
         "bower": "1.3.x",
         "gulp": "3.8.x",
         "gulp-autoprefixer": "0.0.x",
+        "gulp-browserify": "0.5.x",
         "gulp-clean": "0.3.x",
         "gulp-coffee": "2.0.x",
         "gulp-connect": "2.0.x",
@@ -16,14 +17,14 @@
         "gulp-karma": "0.0.x",
         "gulp-less": "1.3.x",
         "gulp-minify-css": "0.3.x",
-        "gulp-ngmin": "0.3.x",
+        "gulp-ng-annotate": "^0.2.0",
         "gulp-rev": "0.4.x",
         "gulp-tsc": "0.9.x",
         "gulp-uglify": "0.3.x",
         "gulp-usemin": "0.3.x",
         "gulp-util": "2.2.x",
         "jshint-stylish": "0.3.x",
-        "karma-chai-plugins": "^0.2.1",
+        "karma-chai-plugins": "0.2.x",
         "karma-chrome-launcher": "0.1.x",
         "karma-junit-reporter": "0.2.x",
         "karma-mocha": "0.1.x",
@@ -44,5 +45,5 @@
         "preprotractor": "npm run update-webdriver",
         "protractor": "protractor test/protractor-conf.js"
     },
-    "engine": "node >= 0.8.0"
+    "engine": "node >= 0.9.0"
 }
