--- a/src/main/webapp/bower.json
+++ b/src/main/webapp/bower.json
@@ -1,28 +1,32 @@
 {
-    "name": "angular-seed",
-    "dependencies": {
-        "angular": "1.3.x",
-        "angular-loader": "1.3.x",
-        "angular-bootstrap": "0.11.x",
-        "angular-cache": "3.0.x",
-        "angular-cookies": "1.3.x",
-        "angular-local-storage": "0.0.x",
-        "angular-resource": "1.3.x",
-        "angular-sanitize": "1.3.x",
-        "angular-ui-router": "0.2.x",
-        "bootstrap": "3.2.x",
-        "font-awesome": "4.1.x",
-        "jquery": "2.1.x",
-        "lodash": "2.4.x",
-        "stringjs": "1.9.x",
-        "vkbeautify": "https://github.com/vkiryukhin/vkBeautify.git",
-        "x2js": "*",
-        "xregexp": "2.0.x",
-        "angular-chosen-localytics": "1.0.x",
-        "chosen": "1.1.x"
-    },
-    "devDependencies": {
-        "angular-mocks": "1.3.x",
-        "angular-scenario": "1.3.x"
-    }
+  "name": "angular-seed",
+  "dependencies": {
+    "angular": "1.3.x",
+    "angular-loader": "1.3.x",
+    "angular-bootstrap": "0.11.x",
+    "angular-cache": "3.0.x",
+    "angular-cookies": "1.3.x",
+    "angular-local-storage": "0.0.x",
+    "angular-resource": "1.3.x",
+    "angular-sanitize": "1.3.x",
+    "angular-ui-router": "0.2.x",
+    "bootstrap": "3.2.x",
+    "font-awesome": "4.1.x",
+    "jquery": "2.1.x",
+    "lodash": "2.4.x",
+    "stringjs": "1.9.x",
+    "vkbeautify": "https://github.com/vkiryukhin/vkBeautify.git",
+    "x2js": "*",
+    "xregexp": "2.0.x",
+    "angular-chosen-localytics": "1.0.x",
+    "chosen": "1.1.x"
+  },
+  "devDependencies": {
+    "angular-mocks": "1.3.x",
+    "angular-scenario": "1.3.x"
+  },
+  "resolutions": {
+    "angular": "1.3.x",
+    "chosen": "e-tag:3faf39b4e"
+  }
 }
