--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,10 +2,10 @@ akka {
   loglevel = "DEBUG"
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   actor.debug {
-    autoreceive = on
-    receive = on
-    lifecycle = on
-    event-stream = on
-    fsm = on
+//    autoreceive = on
+//    receive = on
+//    lifecycle = on
+//    event-stream = on
+//    fsm = on
   }
 }
