--- a/ui/webapp/package.json
+++ b/ui/webapp/package.json
@@ -1,49 +1,28 @@
 {
-    "name": "spray-angular-learining",
-    "version": "0.0.1",
-    "private": true,
-    "devDependencies": {
-        "bower": "1.3.x",
-        "gulp": "3.8.x",
-        "gulp-autoprefixer": "0.0.x",
-        "gulp-browserify": "0.5.x",
-        "gulp-clean": "0.3.x",
-        "gulp-coffee": "2.0.x",
-        "gulp-connect": "2.0.x",
-        "gulp-ignore": "1.1.x",
-        "gulp-jade": "0.6.x",
-        "gulp-jsbeautifier": "0.0.x",
-        "gulp-jshint": "1.6.x",
-        "gulp-karma": "0.0.x",
-        "gulp-less": "1.3.x",
-        "gulp-minify-css": "0.3.x",
-        "gulp-ng-annotate": "^0.2.0",
-        "gulp-rev": "0.4.x",
-        "gulp-tsc": "0.9.x",
-        "gulp-uglify": "0.3.x",
-        "gulp-usemin": "0.3.x",
-        "gulp-util": "2.2.x",
-        "jshint-stylish": "0.3.x",
-        "karma-chai-plugins": "0.2.x",
-        "karma-chrome-launcher": "0.1.x",
-        "karma-junit-reporter": "0.2.x",
-        "karma-mocha": "0.1.x",
-        "protractor": "1.0.x",
-        "proxy-middleware": "0.5.x",
-        "run-sequence": "0.3.x",
-        "url": "0.10.x"
-    },
-    "scripts": {
-        "postinstall": "bower install",
-        "prestart": "npm install",
-        "start": "gulp dist",
-        "pretest": "npm install",
-        "test": "karma start test/karma.conf.js",
-        "test-single-run": "karma start test/karma.conf.js  --single-run",
-        "preupdate-webdriver": "npm install",
-        "update-webdriver": "webdriver-manager update",
-        "preprotractor": "npm run update-webdriver",
-        "protractor": "protractor test/protractor-conf.js"
-    },
-    "engine": "node >= 0.9.0"
+  "name": "ui",
+  "version": "1.0.0",
+  "homepage": "https://github.com/michalkowol/spray-angular-learning",
+  "devDependencies": {
+    "gulp": "3.8.x",
+    "bower": "1.3.x",
+    "gulp-jade": "0.9.x",
+    "gulp-jshint": "1.8.x",
+    "gulp-usemin": "0.3.x",
+    "gulp-browserify": "0.5.x",
+    "gulp-stylus": "1.3.x",
+    "nib": "1.0.x",
+    "gulp-minify-css": "0.3.x",
+    "gulp-uglify": "1.0.x",
+    "gulp-autoprefixer": "1.0.x",
+    "gulp-connect": "2.0.x",
+    "proxy-middleware": "0.7.x",
+    "del": "0.1.x",
+    "run-sequence": "1.0.x",
+    "jshint-stylish": "1.0.x"
+  },
+  "scripts": {
+    "prestart": "npm install",
+    "postinstall": "bower install",
+    "start": "gulp"
+  }
 }
