NT Better logging

--- a/api/src/main/resources/application.conf
+++ b/api/src/main/resources/application.conf
@@ -1,11 +1,15 @@
 akka {
   loglevel = "DEBUG"
   loggers = ["akka.event.slf4j.Slf4jLogger"]
+
+  log-dead-letters = on
+  log-dead-letters-during-shutdown = on
+
   actor.debug {
-//    autoreceive = on
-//    receive = on
-//    lifecycle = on
-//    event-stream = on
-//    fsm = on
+    //autoreceive = on
+    //receive = on
+    //lifecycle = on
+    //event-stream = on
+    //fsm = on
   }
 }
