--- a/ui/webapp/package.json
+++ b/ui/webapp/package.json
@@ -3,25 +3,27 @@
   "version": "1.0.0",
   "homepage": "https://github.com/michalkowol/spray-angular-learning",
   "devDependencies": {
-    "gulp": "3.8.x",
     "bower": "1.3.x",
-    "gulp-jade": "0.10.x",
-    "gulp-jshint": "1.9.x",
-    "gulp-usemin": "0.3.x",
+    "del": "1.1.x",
+    "gulp": "3.8.x",
+    "gulp-autoprefixer": "2.1.x",
     "gulp-browserify": "0.5.x",
-    "gulp-stylus": "1.3.x",
-    "nib": "1.0.x",
-    "gulp-minify-css": "0.3.x",
-    "gulp-uglify": "1.0.x",
-    "gulp-autoprefixer": "2.0.x",
     "gulp-connect": "2.2.x",
-    "proxy-middleware": "0.7.x",
-    "del": "0.1.x",
-    "run-sequence": "1.0.x",
-    "jshint-stylish": "1.0.x"
+    "gulp-jade": "0.11.x",
+    "gulp-jshint": "1.9.x",
+    "gulp-minify-css": "0.4.x",
+    "gulp-sourcemaps": "^1.3.0",
+    "gulp-stylus": "2.0.x",
+    "gulp-uglify": "1.1.x",
+    "gulp-usemin": "0.3.x",
+    "jshint-stylish": "1.0.x",
+    "nib": "1.1.x",
+    "proxy-middleware": "0.9.x",
+    "run-sequence": "1.0.x"
   },
   "scripts": {
     "deploy": "npm install && bower install && gulp",
-    "server": "npm install && bower install && gulp server"
+    "server": "npm install && bower install && gulp server",
+    "update": "npm-check-updates"
   }
 }
