--- a/ui/webapp/package.json
+++ b/ui/webapp/package.json
@@ -12,10 +12,10 @@
     "gulp-jade": "0.11.x",
     "gulp-jshint": "1.9.x",
     "gulp-minify-css": "0.4.x",
-    "gulp-sourcemaps": "^1.3.0",
+    "gulp-sourcemaps": "1.3.x",
     "gulp-stylus": "2.0.x",
     "gulp-uglify": "1.1.x",
-    "gulp-usemin": "0.3.x",
+    "gulp-usemin": "0.2.x",
     "jshint-stylish": "1.0.x",
     "nib": "1.1.x",
     "proxy-middleware": "0.9.x",
