--- a/api/src/main/resources/application.conf
+++ b/api/src/main/resources/application.conf
@@ -1,6 +1,7 @@
 akka {
-  loglevel = "DEBUG"
-  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  loglevel = debug
+  loggers = [akka.event.slf4j.Slf4jLogger]
+  logger-startup-timeout = 30s
 
   log-dead-letters = on
   log-dead-letters-during-shutdown = on
