Added psql config; AddedDAOs; Added DBAccess service; Removed Json4sSupport from PerRequest - used com.paypal.cascade instead; Added futureMarshaller; Added Settings;

--- a/api/src/main/resources/application.conf
+++ b/api/src/main/resources/application.conf
@@ -14,3 +14,29 @@ akka {
     //fsm = on
   }
 }
+
+server.port {
+  port = 8080
+  port = ${?server.port.base}
+  offset = ${?server.port.offset}
+}
+
+db {
+  h2.slick = {
+    url = "jdbc:h2:~/slick"
+    driver = org.h2.Driver
+    connectionPool = disabled
+    keepAliveConnection = true
+    user = sa
+  }
+  psql {
+    aws.yourcode = {
+      url = "jdbc:postgresql://yourcode.czumbko72uch.eu-central-1.rds.amazonaws.com:5432/yourcode"
+      driver = org.postgresql.Driver
+      connectionPool = disabled
+      keepAliveConnection = true
+      user = ${db.psql.aws.yourcode.user}
+      password = ${db.psql.aws.yourcode.password}
+    }
+  }
+}
