NT Changed conf

--- a/api/src/main/resources/application.conf
+++ b/api/src/main/resources/application.conf
@@ -35,8 +35,8 @@ db {
       driver = org.postgresql.Driver
       connectionPool = disabled
       keepAliveConnection = true
-      user = ${db.psql.aws.yourcode.user}
-      password = ${db.psql.aws.yourcode.password}
+      user = ${?db.psql.aws.yourcode.user}
+      password = ${?db.psql.aws.yourcode.password}
     }
   }
 }
