NT Added DB helper; Added anorm

--- a/api/src/main/resources/application.conf
+++ b/api/src/main/resources/application.conf
@@ -21,22 +21,11 @@ server.port {
   offset = ${?server.port.offset}
 }
 
-db {
-  h2.slick = {
-    url = "jdbc:h2:~/slick"
-    driver = org.h2.Driver
-    connectionPool = disabled
-    keepAliveConnection = true
-    user = sa
-  }
-  psql {
-    aws.yourcode = {
-      url = "jdbc:postgresql://yourcode.czumbko72uch.eu-central-1.rds.amazonaws.com:5432/yourcode"
-      driver = org.postgresql.Driver
-      connectionPool = disabled
-      keepAliveConnection = true
-      user = ${?db.psql.aws.yourcode.user}
-      password = ${?db.psql.aws.yourcode.password}
-    }
-  }
+db.default {
+  driver= org.postgresql.Driver
+  url="jdbc:postgresql://yourcode.czumbko72uch.eu-central-1.rds.amazonaws.com:5432/yourcode"
+  user = yourcode
+  user = ${?db.psql.aws.yourcode.user}
+  password = secret
+  password = ${?db.psql.aws.yourcode.password}
 }
