NT A lot of changes

--- a/api/src/main/resources/application.conf
+++ b/api/src/main/resources/application.conf
@@ -26,6 +26,6 @@ db.default {
   url="jdbc:postgresql://yourcode.czumbko72uch.eu-central-1.rds.amazonaws.com:5432/yourcode"
   user = yourcode
   user = ${?db.psql.aws.yourcode.user}
-  password = secret
+  password = "secret"
   password = ${?db.psql.aws.yourcode.password}
 }
