--- a/ui/webapp/package.json
+++ b/ui/webapp/package.json
@@ -12,6 +12,7 @@
     "gulp-jade": "0.11.x",
     "gulp-jshint": "1.9.x",
     "gulp-minify-css": "0.4.x",
+    "gulp-react": "3.0.x",
     "gulp-sourcemaps": "1.3.x",
     "gulp-stylus": "2.0.x",
     "gulp-uglify": "1.1.x",
