--- a/ui/webapp/package.json
+++ b/ui/webapp/package.json
@@ -7,17 +7,15 @@
     "del": "1.1.x",
     "gulp": "3.8.x",
     "gulp-autoprefixer": "2.1.x",
+    "gulp-babel": "4.0.x",
     "gulp-browserify": "0.5.x",
     "gulp-connect": "2.2.x",
     "gulp-jade": "0.11.x",
-    "gulp-jshint": "1.9.x",
     "gulp-minify-css": "0.4.x",
-    "gulp-react": "3.0.x",
     "gulp-sourcemaps": "1.3.x",
     "gulp-stylus": "2.0.x",
     "gulp-uglify": "1.1.x",
     "gulp-usemin": "0.2.x",
-    "jshint-stylish": "1.0.x",
     "nib": "1.1.x",
     "proxy-middleware": "0.9.x",
     "run-sequence": "1.0.x"
