--- a/ui/webapp/bower.json
+++ b/ui/webapp/bower.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "bootstrap": "3.3.x",
     "jquery": "2.1.x",
-    "angular": "1.3.x"
+    "angular": "1.3.x",
+    "immutable": "3.7.x",
+    "react": "0.13.x"
   }
 }
